syntax = "proto3";

package pb;

option csharp_namespace = "Protos";

import "Protos/user.proto";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    Payload payload = 1;
    string token = 2;
}

