syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Protos";

message Payload {
    string id = 1;
    string username = 2;
    google.protobuf.Timestamp issued_at = 4;
    google.protobuf.Timestamp expires_at = 5;
}

